# machi-koro-sim

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: card.rs  engine.rs  game.rs  game_debug.rs  landmark.rs  main.rs  math.rs  player.rs  rng.rs  simulation.rs
src/models/: card.rs  landmark.rs  mod.rs  player.rs
src/optimization/: heuristics.rs
src/player_strategies/: all_player_strategies.rs  game_extensions.rs  greedy_best_card_strategy.rs  greedy_strategy.rs  landmark_rush_strategy.rs  mod.rs  optimized_strategy.rs  player_strategy.rs  random_strategy.rs  strategy_utils.rs
src/rules/: card.rs  game_helpers.rs  landmark.rs  mod.rs
src/simulation/: accumulator.rs  mod.rs  simulator.rs
